Fixes: #5: The legend for integration hours by gear plot can overflow.

--- a/static/css/astrobin.less
+++ b/static/css/astrobin.less
@@ -1762,6 +1762,10 @@ ul.bar {
             margin-top: 120px;
         }
     }
+    .legend {
+        width: 90%;
+        margin: @spacer-xlarge auto 0 auto;
+    }
 }   
 
 ul.topnav {
